src/test/deca/context/valid/ContextSansObjet/Condition/condIfBooleenne.deca
//Description:
//  condition booléenne dans if
//
//Résultat:
// ok
{
if(true)
{
    print("ok");
}
}
